# montgomery_ops

./: CMakeLists.txt  README.md  common.h  test.c
src/: mld_polyvecl_pointwise_acc_montgomery_l4.S  mld_polyvecl_pointwise_acc_montgomery_l4_sve2.S  mld_polyvecl_pointwise_acc_montgomery_l5.S  mld_polyvecl_pointwise_acc_montgomery_l5_sve2.S  mld_polyvecl_pointwise_acc_montgomery_l7.S  mld_polyvecl_pointwise_acc_montgomery_l7_sve2.S  montgomery_reduce.h  montgomery_ref_compat.h  pointwise_montgomery.S  pointwise_montgomery_sve2.S  poly_pointwise_montgomery_ref.c  polyvecl_pointwise_acc_montgomery_l4_ref.c  polyvecl_pointwise_acc_montgomery_l5_ref.c  polyvecl_pointwise_acc_montgomery_l7_ref.c  polyvecl_pointwise_acc_montgomery_ref.inc
src/include/: arith_native_aarch64.h
